--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   },
   "devDependencies": {
     "node-sass": "^4.14.0",
-    "react-scroll": "^1.8.0"
+    "react-scroll": "^1.8.0",
+    "react-transition-group": "^4.4.1"
   },
-  "homepage": "/vanessarusu2020/"
+  "homepage": "/"
 }
