--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "node-sass": "^4.14.0",
     "react-scroll": "^1.8.0",
+    "react-snap": "^1.23.0",
     "react-transition-group": "^4.4.1"
   }
 }
