--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.14.0",
+    "react-router-hash-link": "^2.4.0",
     "react-scroll": "^1.8.0",
     "react-snap": "^1.23.0",
     "react-transition-group": "^4.4.1"
